NewArchive/daaad87f7c9f3be2cba918eb629ce1bd-61c3814520a8d4318f681038dc4b4da7/output
main.cpp: In function 'int32_t hton(int32_t)':
main.cpp:9:79: error: invalid cast from type 'int32_t {aka int}' to type 'uint32_t {aka unsigned int}'
     return reinterpret_cast<int32_t>(htonl(reinterpret_cast<uint32_t>(hostlong)));
                                                                               ^
